<resources>
    <string name="app_name">MathExList</string>
    <string name="appName">BestMan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="singin">Sing In</string>
    <string name="singup">Sing Up</string>
    <string name="stalin">UserImage</string>
    <string name="statistics">Statistics</string>
    <string name="_0">0</string>
    <string name="exercises_done">Exercises Done</string>
    <string name="percentage">Percentage</string>
    <string name="exercises_left">Exercises Left</string>
    <string name="checklist">CheckList</string>
    <string name="add_section">Add Section</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_exercises">Add exercises</string>

<!--    TODO DELETE NOT USED-->
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="action_logout">Log out</string>
</resources>