<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textSize="56sp"
        android:textColor="@color/teal_200"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.05"
        android:layout_marginBottom="30dp"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="@string/email"
        android:textColorHint="@color/teal_700"
        android:textAlignment="center"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:background="@color/teal_200"
        android:id="@+id/addressEmailInput"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="@string/password"
        android:textColorHint="@color/teal_200"
        android:textAlignment="center"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        android:id="@+id/passwordInput"
        />


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="150dp"
            android:layout_height="70dp"

            android:backgroundTint="@color/teal_700"
            android:textColor="@color/teal_200"
            android:text="@string/singin"
            android:id="@+id/singIn"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/teal_700"
            android:text="@string/singup"
            android:id="@+id/singUp"
            />

    </LinearLayout>



</LinearLayout>