<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background"
    android:gravity="center"
    android:weightSum="3"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appName"
            android:textSize="56sp"
            android:textColor="@color/card_gray"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.05"
            android:layout_marginBottom="30dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/card_gray"
            android:textAlignment="center"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:background="@drawable/input_rounded"
            android:layout_marginBottom="10dp"
            android:id="@+id/addressEmailInput"
            android:padding="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/card_gray"
            android:textAlignment="center"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:background="@drawable/input_rounded"
            android:id="@+id/passwordInput"
            android:padding="20dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_margin="30dp"
            android:orientation="vertical"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main_background"
                android:textColor="@color/card_white"
                android:text="@string/singin"
                android:id="@+id/singIn"
                android:padding="20dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_secondary"
                android:textColor="@color/card_white"
                android:text="@string/singup"
                android:id="@+id/singUp"
                android:padding="20dp"
                />

        </LinearLayout>

    </LinearLayout>




</LinearLayout>