<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListMain"
    android:orientation="vertical"
    android:background="@drawable/background"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/stalin"
        android:src="@drawable/user"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="#CF018786"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:text="@string/statistics"
            android:textAlignment="center"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_margin="4dp"
                    android:textColor="@color/white"
                    android:text="@string/exercises_done"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/teal_200"
                    android:text="@string/_0"
                    android:id="@+id/exerciseDone"
                    android:textAlignment="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_margin="4dp"
                    android:textColor="@color/white"
                    android:text="@string/percentage"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/teal_200"
                    android:text="@string/_0"
                    android:id="@+id/exerciseProcentage"
                    android:textAlignment="center"
                    />

            </LinearLayout>

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_margin="4dp"
                    android:textColor="@color/white"
                    android:text="@string/exercises_left"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/teal_200"
                    android:text="@string/_0"
                    android:id="@+id/exerciseLeft"
                    android:textAlignment="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_margin="4dp"
                    android:textColor="@color/white"
                    android:text="@string/percentage"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/teal_200"
                    android:text="@string/_0"
                    android:id="@+id/exerciseLeftProcentage"
                    android:textAlignment="center"
                    />

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:padding="15dp"
            android:text="@string/checklist"
            android:layout_margin="15dp"
            android:id="@+id/checkListButton"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:padding="15dp"
            android:text="@string/add_section"
            android:layout_margin="15dp"
            android:id="@+id/addSectionButton"
            />
    </LinearLayout>

</LinearLayout>